featured listings add_photos alignment fix for desktop

--- a/app/assets/stylesheets/sortable.scss
+++ b/app/assets/stylesheets/sortable.scss
@@ -6,7 +6,7 @@
 	
 	img{
 		height: 150px;
-		width: 206px;
+		width: 205px;
 		border: 1px solid #ddd;
 	}
 }
